added image to grid

--- a/WPFAppHotelGit/MainWindow.xaml
+++ b/WPFAppHotelGit/MainWindow.xaml
@@ -12,6 +12,7 @@
                 <DataGridTextColumn Header="Id" Width="auto"></DataGridTextColumn> 
                 <DataGridTextColumn Header="Name" Width=""></DataGridTextColumn> 
                 <DataGridTextColumn Header="CountOfStars" Width="auto"></DataGridTextColumn> 
+                <DataGridTextColumn Header="Image" Width="auto"></DataGridTextColumn> 
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
