--- a/WPFAppHotelGit/MainWindow.xaml
+++ b/WPFAppHotelGit/MainWindow.xaml
@@ -9,9 +9,9 @@
     <Grid>
         <DataGrid ItemsSource="{Binding CurrentHotels}" AutoGenerateColumns="False">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Id" Width="auto"></DataGridTextColumn> 
-                <DataGridTextColumn Header="Name" Width=""></DataGridTextColumn> 
-                <DataGridTextColumn Header="CountOfStars" Width="auto"></DataGridTextColumn> 
+                <DataGridTextColumn Binding="{Binding Id}" Header="Id" Width="auto"></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding Name}" Header="Name" Width=""></DataGridTextColumn>
+                <DataGridTextColumn Binding="{Binding CountOfStars}" Header="CountOfStars" Width="auto"></DataGridTextColumn> 
             </DataGrid.Columns>
         </DataGrid>
     </Grid>
